<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_calculator"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <!-- Height -->

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_cm"
            android:inputType="numberDecimal"/>

        <!-- Weight -->

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_kg"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp"/>

        <!-- Button -->

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_marginTop="20dp"/>

        <!-- Result -->

        <TextView
            android:id="@+id/tvBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_intake"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvAdvice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommendation"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>